--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   </head>
   <body>
   	<div id="h1">
-    	<h1>1. Temple HOME jobs Careers ADS advertisements weather</h1>
+    	<h1>1. Temple HOME jobs Careers ADS advertisements weather cat </h1>
     	<div class="nested">
-    		<p> Some Text on Temples and Career </p>
+    		<p> Some Text on Temples and Career Cat</p>
     	</div>
     </div>
-    <h2>2. Temple HOME jobs Careers ADS advertisements weather</h2>
+    <h2>2. Temple HOME jobs Careers ADS advertisements weather cats</h2>
     <div id="h3">
     	<div class="nested">
-    		<h3>3. Temple HOME jobs Careers ADS advertisements weather</h3>
+    		<h3>3. Temple HOME jobs Careers ADS advertisements weather Cats</h3>
     	</div>
 	</div>
     <p>4. Temple HOME jobs Careers ADS advertisements weather</p>
