works for static web pages

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>Temple</title>
   </head>
   <body>
   	<div id="h1">
@@ -8,7 +9,7 @@
     		<p> Some Text on Temples and Career Cat</p>
     	</div>
     </div>
-    <h2>2. Temple HOME jobs Careers ADS advertisements weather cats</h2>
+    <h2>2. Temple HOME jobs Careers ADS advertisements weather millennials</h2>
     <div id="h3">
     	<div class="nested">
     		<h3>3. Temple HOME jobs Careers ADS advertisements weather Cats</h3>
